class Amplifier {
  void on() => print("Amplificador encendido");
  void setVolume(int volume) => print("Volumen en $volume");
}
