class DVDPlayer {
  void on() => print("DVD encendido");
  void play() => print("Reproduciendo película");
}