class Lights {
  void dim() => print("Luces atenuadas");
}