class Projector {
  void on() => print("Proyector encendido");
}
